02/05/2023
Submitted - day16 - Assignment - Find good day

03/05/2023
Submitted - day16 - Homework - Single number 3

04/05/2023
Submitted - day16 - Homework - Sub array with bitwise OR 1

05/05/2023
Submitted - day16 - Homework - Unset x bit from right

06/05/2023
Submitted - day16 - Homework - Bit Compression
Submitted - day12 - Assignment - Matrix Multiplication

07/05/2023
Submitted - day18 - Assignment - divisible by 8

08/05/2023
Submitted - day18 - Assignment - A, B modulo

09/05/2023
Submitted - day18 - Assignment - mod String

10/05/2023
Submitted - day18 - Homework - Concatenate 3 nos

11/05/2023
Submitted - day18 - Homework - Overlapping rectangle

12/05/2023
Submitted - day18 - Homework - LCM and leap year 3

13/05/2023
Submitted - day18 - Homework - Repeating and missing number array

14/05/2023
Submitted - day20 - Assignment - Majority Element

15/05/2023
Submitted - day20 - Assignment - N/3 Repeat Number

16/05/2023
Submitted - day21 - Assignment - Reverse of string, Simple reverse, to lower

17/05/2023
Submitted - day21 - Assignment - toupper , isalnum

18/05/2023
Submitted - day21 - Homework - Count Occurrences

19/05/2023
Submitted - day21 - Homework - Amazing Subarrays

20/05/2023
Submitted - day21 - Homework - Change character

21/05/2023
Submitted - day21 - Homework - String operation

22/05/2023
Submitted - day21 - Homework - Longest String Prefix

23/05/2023
Submitted - day21 - Assignment - Longest palindrome substring

24/05/2023
Submitted - day20 - Assignment - Monkey and door, 100 people in a circle
Submitted - day22 - Assignment - Arithmetic progression

25/05/2023
Submitted - day22 - Assignment - Noble string

