@@ -72,4 +72,12 @@ Submitted - day22 - Assignment - Arithmetic progression
 25/05/2023
 Submitted - day22 - Assignment - Noble string
 
+26/05/2023
+Streak break - 23 to 12
+
+27/05/2023
+Submitted - day22 - Assignment - sort by color
+
+28/05/2023
+Submitted - day22 - Homework - Largest number
 
